<resources>
    <string name="app_name">HeladosVenecia</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="bolis">Bolis</string>
    <string name="paleta">Paleta</string>
    <string name="mixto">Mixto</string>
    <string name="rompope">Rompope</string>
    <string name="nieve">Nieve</string>
    <string name="esquimal">Esquimal</string>
    <string name="sandwich">Sandwich</string>
    <string name="jumbo">Jumbo</string>
    <string name="leche">Leche</string>
    <string name="unidades">Unidades</string>
    <string name="dinero">Dinero</string>
    <string name="agregar">Agregar</string>
    <string name="terminar">Terminar</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="paquetes">Paquetes</string>
    <string name="pesos">Pesos</string>
    <string name="x">X</string>
    <string name="actual">Actual</string>
    <string name="borrar">Borrar</string>
    <string name="piezas">Piezas</string>
    <string name="combos">Combos</string>
    <string name="carrito">Carrito ($)</string>
    <string name="mixto_ch">Mixto ch</string>
    <string name="mixto_md">Mixto md</string>
    <string name="transferencia">Transferencia</string>
</resources>