<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|fill_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableLayout style="@style/customTableLayout">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/numericDisplay"
                            android:layout_width="match_parent"
                            android:layout_marginBottom="10dp"
                            style="@style/numericDisplay" />
                    </FrameLayout>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <Button
                            android:id="@+id/button1"
                            style="@style/numericButton"
                            android:text="@string/_1" />

                        <Button
                            android:id="@+id/button2"
                            style="@style/numericButton"
                            android:text="@string/_2" />

                        <Button
                            android:id="@+id/button3"
                            style="@style/numericButton"
                            android:text="@string/_3" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <Button
                            android:id="@+id/button4"
                            style="@style/numericButton"
                            android:text="@string/_4" />

                        <Button
                            android:id="@+id/button5"
                            style="@style/numericButton"
                            android:text="@string/_5" />

                        <Button
                            android:id="@+id/button6"
                            style="@style/numericButton"
                            android:text="@string/_6" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <Button
                            android:id="@+id/button7"
                            style="@style/numericButton"
                            android:text="@string/_7" />

                        <Button
                            android:id="@+id/button8"
                            style="@style/numericButton"
                            android:text="@string/_8" />

                        <Button
                            android:id="@+id/button9"
                            style="@style/numericButton"
                            android:text="@string/_9" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <Button
                            android:id="@+id/button0"
                            style="@style/numericButton"
                            android:layout_weight="0"
                            android:text="@string/_0" />

                        <Button
                            android:id="@+id/buttonBorrar"
                            style="@style/numericButton"
                            android:layout_weight="0.5"
                            android:text="@string/borrar"
                            android:textSize="30sp" />
                    </LinearLayout>

                </TableRow>

            </TableLayout>

            <TableLayout style="@style/customTableLayout">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <Button
                            android:id="@+id/buttonPiezas"
                            style="@style/categoryButton"
                            android:layout_weight="0.6"
                            android:text="@string/piezas" />

                        <Button
                            android:id="@+id/buttonCombos"
                            style="@style/categoryButton"
                            android:layout_weight="0.6"
                            android:text="@string/combos" />

                        <Button
                            android:id="@+id/buttonCarrito"
                            style="@style/categoryButton"
                            android:layout_weight="0.5"
                            android:text="@string/carrito" />

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <Button
                            android:id="@+id/buttonBolis"
                            style="@style/cheapProductButton"
                            android:text="@string/bolis" />

                        <Button
                            android:id="@+id/buttonPaleta"
                            style="@style/cheapProductButton"
                            android:text="@string/paleta" />

                        <Button
                            android:id="@+id/buttonMixtoChico"
                            style="@style/cheapProductButton"
                            android:text="@string/mixto_ch" />

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <Button
                            android:id="@+id/buttonRompope"
                            style="@style/regularProductButton"
                            android:text="@string/rompope"
                            tools:ignore="InefficientWeight" />

                        <Button
                            android:id="@+id/buttonMixtoMediano"
                            style="@style/regularProductButton"
                            android:text="@string/mixto_md" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <Button
                            android:id="@+id/buttonEsquimal"
                            style="@style/regularProductButton"
                            android:text="@string/esquimal" />

                        <Button
                            android:id="@+id/buttonSandwich"
                            style="@style/regularProductButton"
                            android:text="@string/sandwich" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <Button
                            android:id="@+id/buttonNieve"
                            style="@style/regularProductButton"
                            android:text="@string/nieve" />

                        <Button
                            android:id="@+id/buttonJumbo"
                            style="@style/expensiveProductButton"
                            android:text="@string/jumbo" />

                        <Button
                            android:id="@+id/buttonLeche"
                            style="@style/expensiveProductButton"
                            android:text="@string/leche" />
                    </LinearLayout>
                </TableRow>
            </TableLayout>

            <TableLayout style="@style/customTableLayout">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/checkboxTransferencia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/transferencia"
                        android:layout_marginVertical="5dp"
                        android:textSize="20sp"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/buttonAgregar"
                            style="@style/actionButton"
                            android:layout_marginBottom="5dp"
                            android:text="@string/agregar" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/actualDisplay"
                            style="@style/numericDisplay" />

                        <TextView
                            android:id="@+id/actualLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/actual"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </FrameLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/totalDisplay"
                            style="@style/numericDisplay" />

                        <TextView
                            android:id="@+id/totalLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/total"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </FrameLayout>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/buttonTerminar"
                            style="@style/actionButton"
                            android:backgroundTint="@color/customPurple"
                            android:layout_marginTop="15dp"
                            android:text="@string/terminar"
                            android:textColor="@color/white" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saleList"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>